feat: News with Only space member audience create blank in news list - EXO-61721 (#771)